--- a/happy teachers day/style.css
+++ b/happy teachers day/style.css
@@ -80,4 +80,4 @@ label {
     margin-top: 70px;
     padding-left: 190px; }
 
-/*# sourceMappingURL=happy.css.map */
+/*# sourceMappingURL=style.css.map */
